# cargo_crev_reviews_workspace

./: .gitignore  Cargo.toml  LICENSE  README.md  text_to_speech_1.txt  todo.md
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: cargo_crev_reviews_special_mod.rs  main.rs  utils_mod.rs
cargo_crev_reviews/: .auto_version_from_date.json  Cargo.toml  README.md
cargo_crev_reviews/.github/workflows/: rust.yml
cargo_crev_reviews/samples/: cargo_audit.json  cargo_audit_minimal.json  crates_io_versions_for_crate.txt  crates_io_versions_for_crate_pretty.json
cargo_crev_reviews/src/: auto_generated_files_mod.rs  auto_generated_mod.rs  cargo_audit_mod.rs  cargo_mod.rs  cargo_registry_mod.rs  cargo_tree_mod.rs  common_mod.rs  common_structs_mod.rs  crates_io_mod.rs  crev_mod.rs  db_crate_mod.rs  db_review_mod.rs  db_sled_mod.rs  db_version_mod.rs  db_yanked_mod.rs  files_mod.rs  html_mod.rs  lib.rs  methods_mod.rs  response_get_files_mod.rs  response_get_mod.rs  response_methods_mod.rs  response_post_method_mod.rs  response_post_mod.rs  rpc_methods_mod.rs  server_methods_mod.rs  srv_methods_mod.rs  srv_methods_publisher_mod.rs  stdio_input_password_mod.rs  utils_mod.rs
cargo_crev_reviews/src/db_sled_mod/: db_crate_mod.rs  db_metadata_mod.rs  db_publisher_mod.rs  db_review_mod.rs  db_verify_mod.rs  db_version_mod.rs  db_yanked_mod.rs  mod.rs
cargo_crev_reviews/src/db_version_mod/: crates_io_mod.rs
cargo_crev_reviews/src/srv_methods_mod/: mod.rs  srv_methods_publisher_mod.rs  srv_methods_review_mod.rs  srv_methods_utils_mod.rs  srv_publisher_mod.rs  srv_review_mod.rs  srv_utils_mod.rs
cargo_crev_reviews_common/: .auto_version_from_date.json  Cargo.toml  README.md
cargo_crev_reviews_common/src/: lib.rs
cargo_crev_reviews_micro_web_server_backend/: Cargo.toml  README.md
cargo_crev_reviews_micro_web_server_backend/examples/: dynamic_response.rs  server.rs
cargo_crev_reviews_micro_web_server_backend/src/: files_mod.rs  lib.rs  methods_mod.rs  template_mod.rs
cargo_crev_reviews_pwa_frontend/: README.md
cargo_crev_reviews_pwa_frontend/src/: lib.rs  page_main_mod.rs  utils_mod.rs  web_sys_mod.rs
cargo_crev_reviews_wasm/: .auto_version_from_date.json  Cargo.toml  README.md
cargo_crev_reviews_wasm/src/: auto_generated_mod.rs  cln_methods_cargo_tree_mod.rs  cln_methods_mod.rs  cln_methods_publisher_mod.rs  cln_methods_review_item_mod.rs  cln_methods_review_list_mod.rs  cln_methods_review_mod.rs  cln_methods_verify_mod.rs  cln_methods_version_mod.rs  common_mod.rs  html_mod.rs  html_template_mod.rs  lib.rs  page_main_mod.rs  page_review_mod.rs  page_verify_mod.rs  pages_mod.rs  routing_local_hash_mod.rs  url_utf8_mod.rs  utils_mod.rs  web_sys_mod.rs
cargo_crev_reviews_wasm/src/cln_methods_mod/: cln_cargo_tree_mod.rs  cln_config_mod.rs  cln_methods_cargo_tree_mod.rs  cln_methods_publisher_mod.rs  cln_methods_review_list_mod.rs  cln_methods_utils_mod.rs  cln_methods_version_mod.rs  cln_publisher_item_mod.rs  cln_publisher_list_mod.rs  cln_publisher_mod.rs  cln_review_item_mod.rs  cln_review_list_mod.rs  cln_utils_mod.rs  cln_version_mod.rs  mod.rs
cargo_crev_reviews_wasm_frontend/: Cargo.toml  README.md
cargo_crev_reviews_wasm_frontend/src/: lib.rs  page_main_mod.rs  utils_mod.rs  web_sys_mod.rs
dev_bestia_simple_server/: .auto_version_from_date.json  Cargo.toml  README.md
dev_bestia_simple_server/examples/: dynamic_response.rs  headers.rs  routes.rs  server.rs
dev_bestia_simple_server/src/: lib.rs  parsing.rs  request.rs
dev_bestia_simple_server/tests/: simple-server.rs
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/cargo_crev_reviews/: all.html  enum.Cache.html  enum.Status.html  fn.browser_not_installed.html  fn.cargo_audit_not_installed.html  fn.cargo_crev_not_installed.html  fn.create_persistent_directories.html  fn.db_sled_migration_update.html  fn.empty_and_create_temp_directories.html  fn.file_not_found_404.html  fn.get_config.html  fn.host_port_is_busy.html  fn.not_started_inside_rust_project.html  fn.one_instance_of_the_program_already_running.html  fn.parse_get_uri_and_response_file.html  fn.parse_post_data_and_match_method.html  fn.response_404_not_found.html  fn.response_err_message.html  fn.response_file_base64.html  fn.response_file_text.html  fn.response_modal_message.html  fn.return_json_rpc_result.html  fn.start_web_server.html  fn.sync_in_background_reviews.html  fn.sync_in_background_verify.html  fn.sync_in_background_yanked.html  fn.unlock_crev_id_interactively.html  fn.welcome_print.html  index.html  sidebar-items.js  struct.CARGO_CREV_REVIEWS_CACHE.html  struct.CARGO_CREV_REVIEWS_SLED_DB.html  struct.CARGO_CREV_REVIEWS_SRC.html  struct.CLEAR_ALL.html  struct.CLEAR_LINE.html  struct.CREV_UNLOCKED.html  struct.GREEN.html  struct.HOME_DIR.html  struct.LOCAL.html  struct.RED.html  (+7 more)
docs/cargo_crev_reviews_common/: all.html  index.html  sidebar-items.js  struct.ReviewEditParams.html  struct.ReviewSaveParams.html  struct.ReviewShowParams.html  struct.RpcError.html  struct.RpcErrorCodeMessage.html  struct.RpcMethod.html  struct.RpcResult.html
docs/cargo_crev_reviews_wasm/: all.html  enum.UrlUtf8Error.html  fn.__wasm_bindgen_generated_wasm_bindgen_start.html  fn.get_3_url_param_from_hash.html  fn.router_boilerplate.html  fn.router_for_local_hash_routing.html  fn.rpc_json_request_value.html  fn.wasm_bindgen_start.html  index.html  macro.on_click!.html  macro.on_click.html  macro.on_keyup!.html  macro.on_keyup.html  macro.row_on_click!.html  macro.row_on_click.html  macro.url_u.html  sidebar-items.js  struct.SERVER_FIRST_SUBDIRECTORY.html  struct.SERVER_HOST.html  (+3 more)
images/: server_plantuml.txt  server_plantuml_v2.txt  server_plantuml_v3.txt
samples/: 1.txt  2.txt  my_old_reviews.txt  prerequisites.txt  written.txt
simple_server/: .auto_version_from_date.json  Cargo.toml  README.md
simple_server/examples/: dynamic_response.rs  headers.rs  routes.rs  server.rs
simple_server/src/: lib.rs  parsing.rs  request.rs
simple_server/tests/: simple-server.rs
video_tutorial/: text_to_speech_1.txt
(+928 files in other folders)
