# This is the backend member of cargo_crev_reviews_workspace.
# I wanted to give him the name `cargo_crev_reviews_micro_web_server_backend`
# But because this is the only project that will be published on `crates.io` 
# I give him the name of the application `cargo_crev_reviews`.

[package]
name = "cargo_crev_reviews"
version = "2021.924.1119"
description = "Write cargo-crev reviews in a Graphical User Interface with a cross-platform app written in rust"
authors = ["Luciano Bestia"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucianobestia/cargo_crev_reviews_workspace"
categories = ["web-programming::http-server"]
keywords = ["server", "http"]
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

[dependencies]
dev_bestia_simple_server = "2021.918.1640"

http="0.2.4"
base64 = "0.13.0"
crossterm = "0.21.0"

strum = { version = "0.21", features = ["derive"] }
termion = "1.5.6"
function_name = "0.2.0"
crates-index = "0.17.0"

crev-lib="0.22.0"
crev-data="0.22.0"
anyhow="1.0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
fnv="1.0.7"
lazy_static="1.4.0"
unwrap="1.2.1"
serde_yaml = "0.8.20"
home="0.5.3"
semver = "1.0"