# This is the backend member of cargo_crev_reviews_workspace.
# I wanted to give him the name `cargo_crev_reviews_micro_web_server_backend`
# But because this is the only project that will be published on `crates.io` 
# I give him the name of the application `cargo_crev_reviews`.

[package]
name = "cargo_crev_reviews"
version = "2022.125.1258"
description = "Write cargo-crev reviews in GUI with a cross-platform app written in full-stack Rust"
authors = ["bestia.dev <info@bestia.dev>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/cargo_crev_reviews_workspace"
categories = ["development-tools"]
keywords = ["crev", "GUI", "reviews"]
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

[dependencies]
dev_bestia_string_utils ="0.1.19"
dev_bestia_simple_server = "2021.918.1640"

http="0.2.4"
percent-encoding = "2.1.0"
base64 = "0.13.0"
crossterm = "0.22.1"

strum = { version = "0.23.0", features = ["derive"] }
termion = "1.5.6"
function_name = "0.2.0"
crates-index = "0.18.1"

crev-lib="0.22.2"
crev-data="0.22.2"

anyhow="1.0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
fnv="1.0.7"
lazy_static="1.4.0"
unwrap="1.2.1"
serde_yaml = "0.8.20"
home="0.5.3"
semver = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sled = "0.34.7"
rayon = "1.5.1"
chrono="0.4.19"
num-format = "0.4.0"
derivative = "2.2.0"
log = "0.4.6"
pretty_env_logger = "0.4"
regex = "1.5.4"  
walkdir = "2.3.2"
tempfile="3.3.0"
flate2 = "1.0.22"
tar = "0.4.38"