[package]
name = "cargo_crev_reviews_common"
version = "2021.830.626"
description = "Common structs for cargo_crev_reviews backend and frontend"
authors = ["Luciano Bestia"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucianobestia/cargo_crev_reviews_workspace"
categories = ["web-programming::http-server"]
keywords = ["server", "http"]
publish = false

[dependencies]
unwrap = "1.2.1"
serde_json = "1.0.66"
serde = { version = "1.0", features = ["derive"] }
