[package]
name = "cargo_crev_reviews_micro_web_server_backend"
version = "2020.1228.1953"
description = "Micro web server that is the backend of the application cargo_crev_reviews"
authors = ["Luciano Bestia"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucianobestia/cargo_crev_reviews"
categories = ["web-programming::http-server"]
keywords = ["server", "http"]
publish = false

[dependencies]
simple_server = { path = "../simple_server" }

unwrap = "1.2.1"
serde_json = "1.0.66"
serde = { version = "1.0", features = ["derive"] }
