[package]
name = "cargo_crev_reviews_wasm"
version = "2021.1211.2123"
authors = ["Luciano Bestia <Luciano.Bestia@gmail.com>"]
edition = "2018"
description = "Wasm web app that is the frontend of the application cargo_crev_reviews"
repository = "https://github.com/LucianoBestia/cargo_crev_reviews_workspace"
readme = "README.md"
license = "MIT"
keywords = ["wasm"]
categories = ["learning"]
resolver = "2"
publish = false

[lib]
# cdylib is for the wasm module library
crate-type = ["cdylib"]

[dependencies]
dev_bestia_string_utils = "0.1.19"
dev_bestia_url_utf8 = "0.1.28"
# dev_bestia_html_templating = { path = "../../dev_bestia_html_templating" }
dev_bestia_html_templating = "0.1.41"

reader_for_microxml="2.0.1"
unwrap = "1.2.1"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
js-sys = "0.3.46"
wasm-bindgen-futures = "0.4.20"
serde_json = "1.0.64"
# serde-wasm-bindgen = "0.3.0"
strum = { version = "0.22", features = ["derive"] }
serde = {version = "1.0", features = ["derive"]}
chrono = "0.4.19"
lazy_static ="1.4.0"
function_name = "0.2.0"
anyhow="1.0.44"
percent-encoding = "2.1.0"
log = "0.4.6"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.46"
features = [
  "AbortController",
  "console",
  "Document",
  "Element",
  "ErrorEvent",
  "Headers",
  "HtmlAudioElement",
  "HtmlCollection",
  "HtmlElement",
  "HtmlFormControlsCollection",
  "HtmlFormElement",
  "HtmlHtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "IdbFactory",
  "IdbOpenDbRequest",
  "IdbRequest",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Node",
  "NodeList",
  "Performance",
  "RadioNodeList",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Screen",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

# does not work in workspace member
# [profile.release]
# panic = "abort"
