[package]
name = "cargo_crev_reviews"
version = "2021.817.2058"
authors = ["Luciano Bestia <Luciano.Bestia@gmail.com>"]
edition = "2018"
description = "SEY currency converter Progressive Web App"
repository = "https://github.com/LucianoBestia/cargo_crev_reviews"
readme = "README.md"
license = "MIT"
keywords = ["wasm"]
categories = ["learning"]
resolver = "2"
publish = false

[lib]
# cdylib is for the wasm module library
crate-type = ["cdylib"]

[dependencies]
unwrap = "1.2.1"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
js-sys = "0.3.46"
wasm-bindgen-futures = "0.4.20"
serde_json = "1.0.64"
serde-wasm-bindgen = "0.2.0"
strum = "0.20.0"
strum_macros = "0.20.1"
serde = {version = "1.0", features = ["derive"]}
chrono = "0.4.19"
lazy_static ="1.4.0"

[dependencies.web-sys]
version = "0.3.46"
features = [
  "AbortController",
  "console",
  "Document",
  "Element",
  "ErrorEvent",
  "Headers",
  "HtmlAudioElement",
  "HtmlCollection",
  "HtmlElement",
  "HtmlHtmlElement",
  "HtmlInputElement",
  "IdbFactory",
  "IdbOpenDbRequest",
  "IdbRequest",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Node",
  "Performance",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Screen",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[profile.release]
panic = "abort"
