[package]
name = "simple_server"
version = "2021.901.1802"
description = "simple server from https://github.com/steveklabnik/simple-server"
authors = ["Luciano Bestia"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucianobestia/cargo_crev_reviews_workspace"
categories = ["web-programming::http-server"]
keywords = ["server", "http"]
publish = false

[dependencies]
unwrap = "1.2.1"
http = "0.2.4"
httparse = "1.5.1"
num_cpus = "1"
log = "0.4.14"
time = {version = "0.3.1", features=["default","parsing", "formatting", "macros","std"]}
scoped_threadpool = "0.1.7"

[dev-dependencies]
env_logger = "0.9.0"
